--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
       - run: ls -l
       - uses: actions/checkout@v2
       - run: ls -l
-      - cat .githubb/workflows/main.yaml
+      - run: cat .githubb/workflows/main.yaml
