--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   greet:
-    runs-on: ubuntu-latest
+    runs-on: rockylinux-9-minimal
     steps:
       - name: Greet the User
         run: echo "Hello World!"
@@ -13,4 +13,3 @@ jobs:
       - run: ls -l
       - uses: actions/checkout@v2
       - run: ls -l
-      - run: cat .github/workflows/main.yaml
