--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   greet:
-    runs-on: rockylinux-9-minimal
+    runs-on: rockylinux
     steps:
       - name: Greet the User
         run: echo "Hello World!"
